--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@monaco-editor/loader": "^1.3.3",
     "core-js": "^3.8.3",
+    "monaco-editor": "^0.36.1",
+    "monaco-editor-webpack-plugin": "^7.0.1",
+    "monaco-languageclient": "^5.0.1",
     "vue": "^3.2.13"
   },
   "devDependencies": {
