--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,4 +8,6 @@ RUN pip3 install -r requirements.txt
 
 COPY . .
 
-CMD ["gunicorn", "letmecode.wsgi:application", "--bind", "0.0.0.0:8000", "--workers", "3"]
+CMD python3 manage.py makemigrations && \
+    python3 manage.py migrate && \
+    gunicorn letmecode.wsgi:application --bind 0.0.0.0:8000 --workers 3
