--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,10 @@ services:
     build: ./backend
     ports:
       - 8000:8000
+    depends_on:
+      - db
+    env_file:
+      - ./.env
 
   frontend:
     build: ./frontend
@@ -12,3 +16,28 @@ services:
       - 80:80
     depends_on:
       - backend
+    env_file:
+      - ./.env
+
+  db:
+    image: postgres
+    restart: always
+    expose:
+      - 5432
+    volumes:
+      - letmecode_data:/var/lib/postgresql/data
+    env_file:
+      - ./.env
+
+  pgadmin:
+    image: dpage/pgadmin4
+    restart: always
+    ports:
+      - 8080:80
+    depends_on:
+      - db
+    env_file:
+      - ./.env
+
+volumes:
+  letmecode_data:
