--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@monaco-editor/loader": "^1.3.3",
+    "@popperjs/core": "^2.11.7",
+    "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
     "monaco-editor": "^0.36.1",
     "monaco-editor-webpack-plugin": "^7.0.1",
