--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.9'
+version: "3.9"
 
 services:
   backend:
@@ -16,8 +16,6 @@ services:
       - 80:80
     depends_on:
       - backend
-    env_file:
-      - ./.env
 
   db:
     image: postgres
