--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "monaco-editor-webpack-plugin": "^7.0.1",
     "monaco-languageclient": "^5.0.1",
     "vue": "^3.2.13",
+    "vue-monaco": "^1.2.2",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
@@ -30,7 +31,9 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.2.2"
   },
   "eslintConfig": {
     "root": true,
