--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@monaco-editor/loader": "^1.3.3",
     "@popperjs/core": "^2.11.7",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.0-alpha3",
     "core-js": "^3.8.3",
     "monaco-editor": "0.20.0",
     "monaco-editor-webpack-plugin": "1.9.1",
