--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.3.0-alpha3",
     "core-js": "^3.8.3",
+    "crypto-js": "^4.1.1",
     "monaco-editor": "0.20.0",
     "monaco-editor-webpack-plugin": "1.9.1",
     "monaco-languageclient": "^5.0.1",
